# PGR-Raytracing

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: raytracing_cs.glsl  red_fs.glsl  texture_quad_fs.glsl  texture_quad_gs.glsl  texture_quad_vs.glsl  triag_vs.glsl
src/core/: GERendererBase.cpp  GERendererBase.h  MouseEventHandler.cpp  MouseEventHandler.h  QuickRendererBase.cpp  QuickRendererBase.h  Renderer.cpp  Renderer.h  SceneBuilder.cpp  SceneBuilder.h  main.cpp
src/graphics/: Light.h  Material.h  RaytracingTechnique.cpp  RaytracingTechnique.h  Scene.cpp  Scene.h  Shapes.h  VisualizationTechnique.h
src/graphics/Shapes/: AABB.h  Cylinder.h  Shape.h  Sphere.h
src/util/: OrbitCamera.h  PerspectiveCamera.h  ShaderReader.cpp  ShaderReader.h
